2003-12-13  Jeff Waugh  <jdub@perkypants.org>

	* Makefile: WEBDIR ?= <default>, because we want to set it to something
	different when testing, and explicitly on the main server.

2003-12-11  John Finlay <finlay@moeraki.com>

	* reference.src, tutorial.src: Add files

	* articles.src: Change URL to PyGTK tutorials

	* head.src: Change URL to Pygtk tutorials and reference

	* Makefile: Change WEBDIR and PYTHON definitions. Add definitions for
	IMGDIR, TUTDIRS and REFDIRS. Add tutorial.src and reference.src to
	SRC_PAGES. Add CSS_FILES definition. Add rules for creating IMGDIR,
	TUTDIRS and REFDIRS. Add commands to copy image files and css files.
